--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -18,45 +18,39 @@
   <div class="second-block">
     <picture>
       <source
+        class="projects-img"
         srcset="
-          ./img/1440/rev_desc_14_1@1x.webp 1x,
-          ./img/1440/rev_desc_14_1@2x.webp 2x
+          ./img/projects_img/phone_desktop.jpg    1x,
+          ./img/projects_img/phone_desktop_2x.jpg 2x
         "
         media="(min-width: 1440px)"
       />
 
       <source
-        class="reviews-img"
         srcset="
-          ./img/1280/rev_desc_12_1@1x.webp 1x,
-          ./img/1280/rev_desc_12_1@2x.webp 2x
-        "
-        media="(min-width: 1280px)"
-      />
-
-      <source
-        srcset="
-          ./img/tablet/rev_tab_1@1x.webp 1x,
-          ./img/tablet/rev_tab_1@2x.webp 2x
+          ./img/projects_img/phone_tablet.jpg    1x,
+          ./img/projects_img/phone_tablet_2x.jpg 2x
         "
         media="(min-width: 768px)"
       />
 
       <source
         srcset="
-          ./img/mobile/rev_mob@1x.webp 1x,
-          ./img/mobile/rev_mob@2x.webp 2x
+          ./img/projects_img/phone_mobile.jpg    1x,
+          ./img/projects_img/phone_mobile_2x.jpg 2x
         "
         media="(max-width: 768px)"
       />
 
       <img
-        class="reviews-img"
-        src="./img/1280/rev_desc_12_1@1x.webp"
-        alt="yacht"
+        class="projects-image"
+        src="./img/projects_img/phone_desktop.jpg"
+        alt="project"
       />
     </picture>
   </div>
-  <div class="scroll-button"></div>
-  <div class="scroll-button"></div>
+  <div class="button-box">
+    <div class="scroll-button"></div>
+    <div class="scroll-button"></div>
+  </div>
 </section>
