--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -18,11 +18,13 @@ section {
 }
 .block {
   background-color: #fafafa;
-  border-radius: 24px;
+  border-radius: 24px 24px 0 0;
   padding: 32px;
 }
 .second-block {
   background-color: #242527;
+  padding: 100px 16px;
+  border-radius: 0 0 24px 24px;
 }
 .projects-list-item {
   display: flex;
@@ -67,4 +69,17 @@ section {
   font-size: 16px;
   letter-spacing: -0.02em;
   color: #fafafa;
+}
+.button-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  padding: 32px;
+}
+.scroll-button {
+  border: 1px solid rgba(250, 250, 250, 0.2);
+  border-radius: 60px;
+  width: 52px;
+  height: 52px;
 }
