--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,11 +1,13 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Inter Tight", sans-serif;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 400;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: -0.02em;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  color: #fafafa;
+  background-color: #1c1d20;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
