--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,27 @@
-
+<header class="page-header container">
+  <div class="header-container">
+    <div class="logo-container">
+      <picture>
+        <source
+          srcset="./img/header/header.png 1x, ./img/header/header@2x.png 2x"
+          width="80"
+          height="80"
+        />
+        <img src="./img/header/header.png" alt="profile-picture" />
+      </picture>
+      <a class="logo" href="./index.html">jefferson*</a>
+    </div>
+    <a class="menu-link" href="">Menu</a>
+    <button class="header-button">Order the project</button>
+    <button class="menu-button" type="button" id="openButton">
+      <svg
+        class="icon-menu"
+        width="28"
+        height="28"
+        aria-label="mobile menu open icon"
+      >
+        <use href="./img/header/icons.svg#icon-menu"></use>
+      </svg>
+    </button>
+  </div>
+</header>
