--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,14 +1,17 @@
 <header class="page-header container">
   <div class="header-container">
     <div class="logo-container">
-      <picture>
-        <source
-          srcset="./img/header/header.png 1x, ./img/header/header@2x.png 2x"
-          width="80"
-          height="80"
-        />
-        <img src="./img/header/header.png" alt="profile-picture" />
-      </picture>
+      <a href="./index.html/">
+        <picture>
+          <source
+            srcset="./img/header/header.png 1x, ./img/header/header@2x.png 2x"
+            width="80"
+            height="80"
+          />
+          <img src="./img/header/header.png" alt="profile-picture" />
+        </picture>
+      </a>
+
       <a class="logo" href="./index.html">jefferson*</a>
     </div>
     <a class="menu-link" href="">Menu</a>
