--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -10,7 +10,7 @@
 				<li class="benefits__item">
 					<div class="benefits__icon">
 						<svg class="icon" width="24" height="24">
-							<use href="./images/icons.svg#icon-user"></use>
+							<use href="../img/benefits/icons.svg#icon-user"></use>
 						</svg>
 					</div>
 					<h3 class="benefits__subtitle">Expertise</h3>
@@ -19,7 +19,7 @@
 				<li class="benefits__item">
 					<div class="benefits__icon">
 						<svg class="icon" width="24" height="24">
-							<use href="./images/icons.svg#icon-message-chat-circle"></use>
+							<use href="../img/benefits/icons.svg#icon-message-chat-circle"></use>
 						</svg>
 					</div>
 					<h3 class="benefits__subtitle">Communication</h3>
@@ -28,7 +28,7 @@
 				<li class="benefits__item">
 					<div class="benefits__icon">
 						<svg class="icon" width="24" height="24">
-							<use href="./images/icons.svg#icon-brush"></use>
+							<use href="../img/benefits/icons.svg#icon-brush"></use>
 						</svg>
 					</div>
 					<h3 class="benefits__subtitle">Art</h3>
@@ -37,7 +37,7 @@
 				<li class="benefits__item">
 					<div class="benefits__icon">
 						<svg class="icon" width="24" height="24">
-							<use href="./images/icons.svg#icon-hourglass"></use>
+							<use href="../img/benefits/icons.svg#icon-hourglass"></use>
 						</svg>
 					</div>
 					<h3 class="benefits__subtitle">Urgent execution</h3>
