--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,7 +1,6 @@
 :root {
   font-family: "Inter Tight", sans-serif;
   font-size: 16px;
-  line-height: 24px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: -0.02em;
@@ -14,6 +13,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 /* Reset styles */
@@ -31,7 +34,8 @@ p:last-child {
   margin-bottom: 0;
 }
 
-ul {
+ul,
+ol {
   margin: 0;
   padding: 0;
   list-style: none;
