start js + adaptive css

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -6,16 +6,16 @@
     </div>
     <nav class="swiper-navigation">
       <button class="swiper-button prev-button">
-        <svg class="icon-arrow" width="32" height="32">
+        <svg class="icon-arrow">
           <use href="../img/reviews/arrows.svg#icon-arrow-narrow-left"></use>
         </svg>
       </button>
       <button class="swiper-button next-button">
-        <svg class="icon-arrow" width="32" height="32">
+        <svg class="icon-arrow">
           <use href="../img/reviews/arrows.svg#icon-arrow-narrow-right"></use>
         </svg>
       </button>
     </nav>
-    <div class="not-found"><p>Not found</p></div>
   </div>
+  <div class="not-found"><p>Not found</p></div>
 </section>
