--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,11 +1,16 @@
+/* ========== Mobile ========== */
 .reviews-section {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
     gap: 32px;
-    width: 1376px;
+    min-width: 320px;
+    max-width: 344px;
     margin: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+
 }
 
 .reviews-section h2 {
@@ -23,7 +28,7 @@
     justify-content: flex-start;
     flex-direction: column;
     gap: 32px;
-    width: 1376px;
+    margin: auto;
 }
 
 .reviews-list {
@@ -39,13 +44,125 @@
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: row;
-    gap: 20px;
+    gap: 12px;
 }
 
 .swiper-button {
     border: 1px solid rgba(250, 250, 250, 0.5);
     border-radius: 50%;
-    padding: 18px;
+    padding: 14px;
     background-color: #1c1d20;
-    fill: #FFFFFF;
+    fill: none;
+    stroke: #fafafa;
+}
+
+.reviews-item {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 32px;
+    border: 1px solid rgba(250, 250, 250, 0.2);
+    border-radius: 20px;
+    padding: 32px 24px;
+}
+
+.reviews-avatar {
+    border-radius: 10px;
+}
+
+.reviews-info {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.reviews-name {
+    font-family: "Inter Tight", sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.5;
+    letter-spacing: -0.02em;
+    color: #fafafa;
+}
+
+.reviews-text {
+    font-family: "Inter Tight", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: -0.02em;
+    color: rgba(250, 250, 250, 0.6);
+}
+
+.not-found {
+    margin: auto;
+    display: none;
+}
+
+.icon-arrow {
+    width: 24px;
+    height: 24px;
+}
+
+/* ========== tablet ========== */
+
+@media screen and (min-width: 768px) {
+    .reviews-section {
+        width: 1376px;
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+
+    .swiper-navigation {
+        gap: 20px;
+    }
+
+    .swiper-button {
+        padding: 18px;
+    }
+
+    .reviews-item {
+        width: 344px;
+        height: 302px;
+    }
+
+    .icon-arrow {
+        width: 32px;
+        height: 32px;
+    }
+}
+
+/* ========== Desktop ========== */
+
+@media screen and (min-width: 1440px) {
+    .reviews-section {
+        width: 704px;
+        margin: auto;
+    }
+
+    .swiper-container {
+        width: 1376px;
+    }
+
+    .swiper-navigation {
+        gap: 20px;
+    }
+
+    .swiper-button {
+        padding: 18px;
+    }
+
+    .reviews-item {
+        width: 332px;
+        height: 302px;
+    }
+
+
+
+
+
+
 }
