--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,11 +1,11 @@
-body {
-  background-color: #1c1d20;
-  margin: 0;
-  font-family: 'Inter Tight', sans-serif;
+.projects-section {
+  max-width: 375px;
+  margin: 0 auto;
 }
-section {
-  max-width: 343px;
-  padding: 64px 16px;
+.container {
+  padding: 64px 32px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .projects-title {
   font-weight: 600;
@@ -16,7 +16,7 @@ section {
   color: rgba(250, 250, 250, 0.4);
   margin-bottom: 32px;
 }
-.block {
+.first-block {
   background-color: #fafafa;
   border-radius: 24px 24px 0 0;
   padding: 32px;
@@ -82,4 +82,14 @@ section {
   border-radius: 60px;
   width: 52px;
   height: 52px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.scroll-icon {
+  fill: #fafafa;
+  stroke: #fafafa;
+}
+/* -------------------------------TABLET */
+@media screen and (min-width: 768px) {
 }
