--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: "Inter Tight", sans-serif;
+  font-family: 'Inter Tight', sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -54,4 +54,17 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
