--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,19 +1,3 @@
-.about {
-  max-width: 1440px;
-  margin: 0 auto;
-}
-
-.container-about {
-  max-width: 1376px;
-  margin: 0 auto;
-}
-
-.image-about-container {
-  display: flex;
-  margin-bottom: 96px;
-  gap: 16px;
-}
-
 .hide-title-about {
   position: absolute;
   width: 1px;
@@ -27,21 +11,26 @@
   overflow: hidden;
 }
 
-.title-about-container {
-  border-radius: 24px;
-  width: 680px;
-  height: 700px;
-  background: #242527;
+.image-about-container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 32px;
+  gap: 16px;
+}
 
-  padding: 64px;
+.title-about-container {
+  height: 500px;
+  border-radius: 24px;
+  background: #242527;
+  padding: 28px 32px;
 }
 
 .title-about {
-  font-size: 38px;
-  line-height: 1.05263;
+  line-height: 1.16667;
   letter-spacing: -0.03em;
   text-transform: uppercase;
   color: #fafafa;
+  margin: 0;
 }
 
 .red {
@@ -52,18 +41,18 @@
   color: rgba(250, 250, 250, 0.4);
 }
 
-.img-about {
-  border-radius: 24px;
+.text-about-container {
+  margin-bottom: 32px;
 }
 
-.text-about-container {
-  margin-bottom: 96px;
+.img-about {
+  border-radius: 24px;
 }
 
 .list-about {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 20px;
 }
 
 .item-about {
@@ -84,19 +73,25 @@
   color: rgba(250, 250, 250, 0.4);
 
   margin-right: auto;
+  margin-bottom: 32px;
 }
 
 .text-cv-about-container {
   text-align: start;
-  letter-spacing: -0.02em;
-  color: #fafafa;
-
-  padding: 8px 68px 32px 696px;
+  padding: 12px 0 20px;
 }
 
 .paragraph-about {
   letter-spacing: -0.02em;
   color: #fafafa;
+}
+
+.accordion-second {
+  display: none;
+}
+
+.accordion-third {
+  display: none;
 }
 
 .gap {
@@ -105,36 +100,24 @@
 
 .list-cv-about {
   gap: 10px;
-  width: 430px;
 }
 
 .btn-about {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: transparent;
   border: 1px solid rgba(250, 250, 250, 0.2);
   border-radius: 100px;
-  padding: 10px;
-  width: 40px;
-  height: 40px;
-}
 
-.icon-close {
-  fill: none;
-  stroke: #fafafa;
-  stroke-width: 2px;
-  border: none;
-}
-
-.icon-open {
-  fill: none;
-  stroke: #fafafa;
-  stroke-width: 2px;
-  border: none;
-  transform: rotate(180deg);
+  padding: 9px;
+  width: 36px;
+  height: 36px;
 }
 
 .skills-about-container {
   display: flex;
-  max-width: 1312px;
+  align-items: center;
 }
 
 .list-skills-about {
@@ -142,21 +125,39 @@
   margin-right: auto;
 }
 
+.icon-close {
+  width: 12px;
+  height: 12px;
+  fill: none;
+  stroke: #fafafa;
+  stroke-width: 2px;
+  border: none;
+}
+
+.icon-open {
+  width: 12px;
+  height: 12px;
+  fill: none;
+  stroke: #fafafa;
+  stroke-width: 2px;
+  border: none;
+  transform: rotate(180deg);
+}
+
 .item-skills-about {
+  width: 130px;
+  height: 130px;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  width: 200px;
-  height: 200px;
-  padding: 88px auto;
+
   border: 1px solid rgba(250, 250, 250, 0.2);
   border-radius: 100%;
 }
 
 .title-skills-about {
   text-align: center;
-  font-size: 20px;
   letter-spacing: -0.02em;
   color: #fafafa;
 }
@@ -167,6 +168,8 @@
 }
 
 .btn-arrow {
+  width: 28px;
+  height: 28px;
   background-color: transparent;
   border: none;
   padding: 0;
@@ -174,8 +177,205 @@
 }
 
 .arrow-skills {
+  width: 40px;
+  height: 40px;
   fill: none;
   stroke: #3B3B3B;
   stroke-width: 2px;
   border: none;
+}
+
+/* =========================================== */
+
+.about {
+  min-width: 320px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.container-about {
+  min-width: 300px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 767px) {
+  .hide-mob {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 375px) and (max-width: 767px) {
+
+  .about {
+    min-width: 375px;
+    margin: 0 auto;
+    padding: 0 16px;
+  }
+
+  .container-about {
+    min-width: 343px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1439px) {
+
+  .hide-tab {
+    display: none;
+  }
+
+  .about {
+    min-width: 768px;
+    margin: 0 auto;
+    padding: 0 32px;
+  }
+
+  .container-about {
+    min-width: 704px;
+    margin: 0 auto;
+  }
+
+  .image-about-container {
+    margin-bottom: 64px;
+  }
+
+  .title-about-container {
+    height: 700px;
+    padding: 64px;
+  }
+
+  .title-about {
+    font-size: 38px;
+    line-height: 1.05263;
+  }
+
+  .text-about-container {
+    margin-bottom: 64px;
+  }
+
+  .list-about {
+    gap: 32px;
+  }
+
+  .text-cv-about-container {
+    text-align: start;
+    padding: 8px 0 32px;
+  }
+
+  .btn-about {
+    padding: 10px;
+    width: 40px;
+    height: 40px;
+  }
+
+  .icon-open {
+    width: 12px;
+    height: 12px;
+  }
+
+  .icon-close {
+    width: 12px;
+    height: 12px;
+  }
+
+  .item-skills-about {
+    width: 200px;
+    height: 200px;
+  }
+
+  .btn-arrow {
+    width: 40px;
+    height: 40px;
+  }
+
+  .arrow-skills {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .about {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
+  .container-about {
+    max-width: 1376px;
+    margin: 0 auto;
+  }
+
+  .image-about-container {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 96px;
+  }
+
+  .title-about-container {
+    width: 680px;
+    height: 700px;
+
+    padding: 64px;
+  }
+
+  .title-about {
+    font-size: 38px;
+    line-height: 1.05263;
+  }
+
+  .text-about-container {
+    margin-bottom: 96px;
+  }
+
+  .list-about {
+    gap: 32px;
+  }
+
+  .text-cv-about-container {
+    text-align: start;
+    letter-spacing: -0.02em;
+    color: #fafafa;
+
+    padding: 8px 68px 32px 696px;
+  }
+
+  .list-cv-about {
+    width: 430px;
+  }
+
+  .btn-about {
+    padding: 10px;
+    width: 40px;
+    height: 40px;
+    margin-bottom: 32px;
+  }
+
+  .icon-close {
+    width: 12px;
+    height: 12px;
+  }
+
+  .icon-open {
+    width: 12px;
+    height: 12px;
+  }
+
+  .skills-about-container {
+    max-width: 1312px;
+  }
+
+  .item-skills-about {
+    width: 200px;
+    height: 200px;
+    margin: 88px auto;
+  }
+
+  .title-skills-about {
+    font-size: 20px;
+  }
+
+  .arrow-skills {
+    width: 40px;
+    height: 40px;
+  }
 }
