--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -8,13 +8,13 @@
           personality.</h2>
       </div>
       <picture>
-        <source srcset="./img/about/img.jpg 1x, ./img/about/img@2x.jpg 2x" media="(min-width: 1440px)" />
+        <source srcset="../img/about/img.jpg 1x, ../img/about/img@2x.jpg 2x" media="(min-width: 1440px)" />
 
-        <source srcset="./img/about/img-tab.jpg 1x, ./img/about/img-tab@2x.jpg 2x" media="(min-width: 768px)" />
+        <source srcset="../img/about/img-tab.jpg 1x, ../img/about/img-tab@2x.jpg 2x" media="(min-width: 768px)" />
 
-        <source srcset="./img/about/img-mob.jpg 1x, ./img/about/img-mob@2x.jpg 2x" media="(max-width: 768px)" />
+        <source srcset="../img/about/img-mob.jpg 1x, ../img/about/img-mob@2x.jpg 2x" media="(max-width: 768px)" />
 
-        <img class="img-about" src="./img/about/img.jpg" alt="Man with a laptop">
+        <img class="img-about" src="../img/about/img.jpg" alt="Man with a laptop">
       </picture>
     </div>
     <div class="text-about-container">
@@ -24,7 +24,7 @@
             <h3 class="small-title-about">About me</h3>
             <button type="button" class="btn-about" id="btn-about">
               <svg class="icon-open">
-                <use href="./img/about/icons-about.svg#icon-btn"></use>
+                <use href="../img/about/icons-about.svg#icon-btn"></use>
               </svg>
             </button>
           </div>
@@ -57,7 +57,7 @@
             <h3 class="small-title-about">Role</h3>
             <button type="button" class="btn-about" id="btn-role">
               <svg class="icon-close">
-                <use href="./img/about/icons-about.svg#icon-btn"></use>
+                <use href="../img/about/icons-about.svg#icon-btn"></use>
               </svg>
             </button>
           </div>
@@ -80,7 +80,7 @@
             <h3 class="small-title-about">Education</h3>
             <button type="button" class="btn-about" id="btn-edu">
               <svg class="icon-close">
-                <use href="./img/about/icons-about.svg#icon-btn"></use>
+                <use href="../img/about/icons-about.svg#icon-btn"></use>
               </svg>
             </button>
           </div>
@@ -124,7 +124,7 @@
       </ul>
       <button type="button" class="btn-arrow" id="arrow">
         <svg class="arrow-skills">
-          <use href="./img/about/icons-about.svg#icon-arrow"></use>
+          <use href="../img/about/icons-about.svg#icon-arrow"></use>
         </svg>
       </button>
     </div>
