--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -6,11 +6,16 @@
     flex-direction: column;
     gap: 32px;
     min-width: 320px;
-    max-width: 344px;
+    max-width: 375px;
     margin: auto;
     padding-left: 16px;
     padding-right: 16px;
 
+}
+
+.swiper-navigation .swiper-button-disabled {
+    border: 1px solid rgba(250, 250, 250, 0.2);
+    stroke: rgba(250, 250, 250, 0.2);
 }
 
 .reviews-section h2 {
@@ -29,14 +34,10 @@
     flex-direction: column;
     gap: 32px;
     margin: auto;
-}
-
-.reviews-list {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: row;
-    gap: 16px;
+    overflow: hidden;
+    min-width: 288px;
+    width: 91.73%;
+    max-width: 344px;
 }
 
 .swiper-navigation {
@@ -47,7 +48,8 @@
     gap: 12px;
 }
 
-.swiper-button {
+.swiper-button-prev,
+.swiper-button-next {
     border: 1px solid rgba(250, 250, 250, 0.5);
     border-radius: 50%;
     padding: 14px;
@@ -56,7 +58,7 @@
     stroke: #fafafa;
 }
 
-.reviews-item {
+.reviews-list .reviews-item {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
@@ -65,6 +67,7 @@
     border: 1px solid rgba(250, 250, 250, 0.2);
     border-radius: 20px;
     padding: 32px 24px;
+    height: 374px;
 }
 
 .reviews-avatar {
@@ -111,22 +114,30 @@
 
 @media screen and (min-width: 768px) {
     .reviews-section {
-        width: 1376px;
+        width: 768px;
         padding-left: 32px;
         padding-right: 32px;
+
+        max-width: none;
+    }
+
+    .swiper-container {
+        width: 704px;
+        max-width: none;
     }
 
     .swiper-navigation {
         gap: 20px;
     }
 
-    .swiper-button {
+    .swiper-button-prev,
+    .swiper-button-next {
         padding: 18px;
     }
 
-    .reviews-item {
+    .reviews-list .reviews-item {
         width: 344px;
-        height: 302px;
+        height: 350px;
     }
 
     .icon-arrow {
@@ -139,7 +150,7 @@
 
 @media screen and (min-width: 1440px) {
     .reviews-section {
-        width: 704px;
+        width: 1440px;
         margin: auto;
     }
 
@@ -151,18 +162,14 @@
         gap: 20px;
     }
 
-    .swiper-button {
+    .swiper-button-prev,
+    .swiper-button-next {
         padding: 18px;
     }
 
-    .reviews-item {
+    .reviews-list .reviews-item {
         width: 332px;
-        height: 302px;
+
     }
-
-
-
-
-
 
 }
