--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,20 +1,18 @@
 <section class="reviews-section">
-  <h2>Reviews</h2>
+  <h2 id="reviews">Reviews</h2>
   <div class="swiper-container">
-    <div class="swiper">
-      <ul class="reviews-list"></ul>
-    </div>
+    <ul class="reviews-list swiper-wrapper"></ul>
     <nav class="swiper-navigation">
-      <button class="swiper-button prev-button">
+      <div class="swiper-button-prev">
         <svg class="icon-arrow">
           <use href="../img/reviews/arrows.svg#icon-arrow-narrow-left"></use>
         </svg>
-      </button>
-      <button class="swiper-button next-button">
+      </div>
+      <div class="swiper-button-next">
         <svg class="icon-arrow">
           <use href="../img/reviews/arrows.svg#icon-arrow-narrow-right"></use>
         </svg>
-      </button>
+      </div>
     </nav>
   </div>
   <div class="not-found"><p>Not found</p></div>
