--- a/src/css/benefits.css
+++ b/src/css/benefits.css
@@ -19,7 +19,7 @@ body {
   }
 }
 
-.benefits__container {
+.benefits-container {
   max-width: 375px;
   margin: 0 auto;
   padding: 0 16px;
@@ -29,21 +29,21 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-  .benefits__container {
+  .benefits-container {
     max-width: 768px;
     padding: 0 32px;
   }
 }
 
 @media screen and (min-width: 1440px) {
-  .benefits__container {
+  .benefits-container {
     max-width: 1440px;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 16px;
   }
 }
 
-.benefits__title {
+.benefits-title {
   font-weight: 600;
   font-size: 16px;
   line-height: 1.5;
@@ -52,7 +52,7 @@ body {
   color: rgba(250, 250, 250, 0.4);
 }
 
-.benefits__list {
+.benefits-list {
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 16px;
@@ -60,13 +60,13 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-  .benefits__list {
+  .benefits-list {
     grid-template-columns: repeat(2, 1fr);
     margin-bottom: 64px;
   }
 }
 
-.benefits__item {
+.benefits-item {
   border-radius: 20px;
   padding: 24px;
   background: #242527;
@@ -75,12 +75,12 @@ body {
   transition: opacity 0.8s ease, transform 0.5s ease;
 }
 
-.benefits__item.visible {
+.benefits-item.visible {
   opacity: 1;
   transform: translateY(0);
 }
 
-.benefits__icon {
+.benefits-icon {
   display: block;
   width: 48px;
   height: 48px;
@@ -94,18 +94,18 @@ body {
   stroke: #fafafa;
 }
 
-.benefits__subtitle {
+.benefits-subtitle {
   font-weight: 600;
   font-size: 20px;
   line-height: 1.5;
   letter-spacing: -0.02em;
   color: #fafafa;
 }
-.benefits__subtitle:not(:last-child) {
+.benefits-subtitle:not(:last-child) {
   margin-bottom: 8px;
 }
 
-.benefits__text {
+.benefits-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -113,7 +113,7 @@ body {
   color: rgba(250, 250, 250, 0.6);
 }
 
-.benefits__button {
+.benefits-button {
   display: inline-block;
   padding: 18px 36px;
   border-radius: 60px;
@@ -126,7 +126,7 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.benefits__button:hover,
-.benefits__button:focus {
+.benefits-button:hover,
+.benefits-button:focus {
   background-color: #e0373f;
 }
