--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,51 +1,51 @@
-<section class="section__benefits benefits">
+<section class="section-benefits benefits">
 
-	<div class="benefits__container">
+	<div class="benefits-container">
 
-		<h2 class="benefits__title">Benefits of working with me</h2>
+		<h2 class="benefits-title">Benefits of working with me</h2>
 
-		<div class="benefits__content">
+		<div class="benefits-content">
 
-			<ul class="benefits__list">
-				<li class="benefits__item">
-					<div class="benefits__icon">
+			<ul class="benefits-list">
+				<li class="benefits-item">
+					<div class="benefits-icon">
 						<svg class="icon" width="24" height="24">
 							<use href="../img/benefits/icons.svg#icon-user"></use>
 						</svg>
 					</div>
-					<h3 class="benefits__subtitle">Expertise</h3>
-					<p class="benefits__text">As a highly experienced developer, I have deep knowledge of programming and website development.</p>
+					<h3 class="benefits-subtitle">Expertise</h3>
+					<p class="benefits-text">As a highly experienced developer, I have deep knowledge of programming and website development.</p>
 				</li>
-				<li class="benefits__item">
-					<div class="benefits__icon">
+				<li class="benefits-item">
+					<div class="benefits-icon">
 						<svg class="icon" width="24" height="24">
 							<use href="../img/benefits/icons.svg#icon-message-chat-circle"></use>
 						</svg>
 					</div>
-					<h3 class="benefits__subtitle">Communication</h3>
-					<p class="benefits__text">Understanding your needs and wants is my priority and I am always open to discussions and corrections.</p>
+					<h3 class="benefits-subtitle">Communication</h3>
+					<p class="benefits-text">Understanding your needs and wants is my priority and I am always open to discussions and corrections.</p>
 				</li>
-				<li class="benefits__item">
-					<div class="benefits__icon">
+				<li class="benefits-item">
+					<div class="benefits-icon">
 						<svg class="icon" width="24" height="24">
 							<use href="../img/benefits/icons.svg#icon-brush"></use>
 						</svg>
 					</div>
-					<h3 class="benefits__subtitle">Art</h3>
-					<p class="benefits__text">Thanks to my creative nature, I am ready to accept challenges and help you bring your ideas to life.</p>
+					<h3 class="benefits-subtitle">Art</h3>
+					<p class="benefits-text">Thanks to my creative nature, I am ready to accept challenges and help you bring your ideas to life.</p>
 				</li>
-				<li class="benefits__item">
-					<div class="benefits__icon">
+				<li class="benefits-item">
+					<div class="benefits-icon">
 						<svg class="icon" width="24" height="24">
 							<use href="../img/benefits/icons.svg#icon-hourglass"></use>
 						</svg>
 					</div>
-					<h3 class="benefits__subtitle">Urgent execution</h3>
-					<p class="benefits__text">I understand how important time is to you. Ready to work quickly and efficiently, without reducing the quality of work.</p>
+					<h3 class="benefits-subtitle">Urgent execution</h3>
+					<p class="benefits-text">I understand how important time is to you. Ready to work quickly and efficiently, without reducing the quality of work.</p>
 				</li>
 			</ul>
 
-			<a href="#worktogether" class="benefits__button">Order the project</a>
+			<a href="#worktogether" class="benefits-button">Order the project</a>
 
 		</div>
 
