--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -121,14 +121,14 @@
         <div class="scroll-button swiper-button-prev">
           <svg class="scroll-icon" width="32" height="32">
             <use
-              href="../img/projects/projects-sprite.svg#icon-arrow-narrow-left"
+              href="./img/projects/projects-sprite.svg#icon-arrow-narrow-left"
             ></use>
           </svg>
         </div>
         <div class="scroll-button swiper-button-next">
           <svg class="scroll-icon" width="32" height="32">
             <use
-              href="../img/projects/projects-sprite.svg#icon-arrow-narrow-right"
+              href="./img/projects/projects-sprite.svg#icon-arrow-narrow-right"
             ></use>
           </svg>
         </div>
