--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -18,7 +18,7 @@
       </picture>
     </div>
     <div class="text-about-container">
-      <ul class="list-about accordion-container">
+      <ul class="accordion-container list-about">
         <li class="item-about">
           <div class="head-cv-about-container">
             <h3 class="small-title-about">About me</h3>
@@ -28,7 +28,7 @@
               </svg>
             </button>
           </div>
-          <div class="text-cv-about-container accordion-first">
+          <div class="accordion-first text-cv-about-container">
             <p class="paragraph-about gap">I am Lloyd Jefferson, a talented programmer with extensive expertise in
               software development. I have an understanding
               of
@@ -61,7 +61,7 @@
               </svg>
             </button>
           </div>
-          <div class="text-cv-about-container accordion-second">
+          <div class="accordion-second text-cv-about-container">
             <ul class="list-cv-about">
               <li>
                 <p class="paragraph-about">Frontend development</p>
@@ -84,7 +84,7 @@
               </svg>
             </button>
           </div>
-          <div class="text-cv-about-container accordion-third">
+          <div class="accordion-third text-cv-about-container">
             <ul class="list-cv-about">
               <li>
                 <p class="paragraph-about">2018 - 2019 / Frontend Development Diploma, GoIT IT <br> School, New York</p>
@@ -101,28 +101,31 @@
         </li>
       </ul>
     </div>
-    <div class="skills-about-container">
-      <ul class="list-skills-about">
-        <li class="item-skills-about red-skill">
+    <div class="swiper skills-about-container">
+      <ul class="swiper-wrapper list-skills-about">
+        <li class="swiper-slide item-skills-about red-skill">
           <h3 class="title-skills-about">HTML/CSS</h3>
         </li>
-        <li class="item-skills-about">
+        <li class="swiper-slide item-skills-about">
           <h3 class="title-skills-about">JavaScript</h3>
         </li>
-        <li class="item-skills-about hide-mob">
+        <li class="swiper-slide item-skills-about">
           <h3 class="title-skills-about">React</h3>
         </li>
-        <li class="item-skills-about hide-mob hide-tab">
+        <li class="swiper-slide item-skills-about">
           <h3 class="title-skills-about">Node.js</h3>
         </li>
-        <li class="item-skills-about hide-mob hide-tab">
+        <li class="swiper-slide item-skills-about">
           <h3 class="title-skills-about">React Native</h3>
         </li>
-        <li class="item-skills-about hide-mob hide-tab">
+        <li class="swiper-slide item-skills-about">
           <h3 class="title-skills-about">Soft skills</h3>
         </li>
+        <li class="swiper-slide hide-desktop">
+          <h3 class="title-skills-about hide-desktop">Hard skills</h3>
+        </li>
       </ul>
-      <button type="button" class="btn-arrow" id="arrow">
+      <button type="button" class="swiper-btn btn-arrow" id="arrow">
         <svg class="arrow-skills">
           <use href="./img/about/icons-about.svg#icon-arrow"></use>
         </svg>
