--- a/src/css/about.css
+++ b/src/css/about.css
@@ -115,12 +115,12 @@
   height: 36px;
 }
 
-.skills-about-container {
+.swiper.skills-about-container {
   display: flex;
   align-items: center;
 }
 
-.list-skills-about {
+.swiper-wrapper.list-skills-about {
   display: flex;
   margin-right: auto;
 }
@@ -144,7 +144,7 @@
   transform: rotate(180deg);
 }
 
-.item-skills-about {
+.swiper-slide.item-skills-about {
   width: 130px;
   height: 130px;
   display: flex;
@@ -154,6 +154,15 @@
 
   border: 1px solid rgba(250, 250, 250, 0.2);
   border-radius: 100%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.item-skills-about:hover {
+  background-color: #E0373F;
+}
+
+.item-skills-about:focus {
+  background-color: #E0373F;
 }
 
 .title-skills-about {
@@ -165,6 +174,15 @@
 .red-skill {
   background-color: #ed3b44;
   border: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.red-skill:hover {
+  background-color: #E0373F;
+}
+
+.red-skill:hover {
+  background-color: #E0373F;
 }
 
 .btn-arrow {
@@ -198,8 +216,12 @@
   margin: 0 auto;
 }
 
+.swiper-slide.hide-desktop {
+  display: none;
+}
+
 @media screen and (max-width: 767px) {
-  .hide-mob {
+  .swiper-slide.hide-mob {
     display: none;
   }
 }
@@ -220,7 +242,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1439px) {
 
-  .hide-tab {
+  .swiper-slide.hide-tab {
     display: none;
   }
 
