--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -25,7 +25,7 @@
   padding: 100px 16px;
   border-radius: 0 0 24px 24px;
 }
-.projects-list-item {
+.tech-list {
   display: flex;
   flex-wrap: wrap;
   gap: 6px;
@@ -73,7 +73,7 @@
   justify-content: center;
   align-items: center;
   gap: 12px;
-  padding: 32px;
+  margin-top: 32px;
 }
 .scroll-button {
   border: 1px solid rgba(250, 250, 250, 0.2);
@@ -83,10 +83,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.scroll-icon {
   fill: #fafafa;
   stroke: #fafafa;
+}
+
+.disabled-icon {
+  fill: #3b3b3b;
+  stroke: #3b3b3b;
 }
 /* -------------------------------TABLET */
 @media screen and (min-width: 768px) {
@@ -96,6 +99,9 @@
   .first-block {
     padding: 64px 146px 64px 64px;
   }
+  .second-block {
+    padding: 120px 45px;
+  }
   .projects-text {
     font-weight: 500;
     font-size: 44px;
@@ -103,12 +109,9 @@
     letter-spacing: -0.03em;
     margin-top: 164px;
   }
-  .second-block {
-    padding: 120px 45px;
-  }
   .button-box {
     gap: 20px;
-    padding: 64px;
+    margin-top: 64px;
   }
   .scroll-button {
     width: 68px;
