--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -91,8 +91,11 @@
   align-items: center;
   fill: #fafafa;
   stroke: #fafafa;
+  cursor: pointer;
 }
-
+.scroll-button:hover {
+  border-color: rgb(194, 121, 124);
+}
 .disabled-button {
   opacity: 0.2;
 }
