--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -18,17 +18,17 @@
       </picture>
     </div>
     <div class="text-about-container">
-      <ul class="accordion-container list-about">
+      <ul class="list-about">
         <li class="item-about">
           <div class="head-cv-about-container">
             <h3 class="small-title-about">About me</h3>
             <button type="button" class="btn-about" id="btn-about">
-              <svg class="icon-open">
+              <svg class="icon-about icon-open">
                 <use href="./img/about/icons-about.svg#icon-btn"></use>
               </svg>
             </button>
           </div>
-          <div class="accordion-first text-cv-about-container">
+          <div class="text-cv-about-container">
             <p class="paragraph-about gap">I am Lloyd Jefferson, a talented programmer with extensive expertise in
               software development. I have an understanding
               of
@@ -56,12 +56,12 @@
           <div class="head-cv-about-container">
             <h3 class="small-title-about">Role</h3>
             <button type="button" class="btn-about" id="btn-role">
-              <svg class="icon-close">
+              <svg class="icon-about icon-close">
                 <use href="./img/about/icons-about.svg#icon-btn"></use>
               </svg>
             </button>
           </div>
-          <div class="accordion-second text-cv-about-container">
+          <div class="text-cv-about-container">
             <ul class="list-cv-about">
               <li>
                 <p class="paragraph-about">Frontend development</p>
@@ -79,12 +79,12 @@
           <div class="head-cv-about-container">
             <h3 class="small-title-about">Education</h3>
             <button type="button" class="btn-about" id="btn-edu">
-              <svg class="icon-close">
+              <svg class="icon-about icon-close">
                 <use href="./img/about/icons-about.svg#icon-btn"></use>
               </svg>
             </button>
           </div>
-          <div class="accordion-third text-cv-about-container">
+          <div class="text-cv-about-container">
             <ul class="list-cv-about">
               <li>
                 <p class="paragraph-about">2018 - 2019 / Frontend Development Diploma, GoIT IT <br> School, New York</p>
@@ -101,31 +101,31 @@
         </li>
       </ul>
     </div>
-    <div class="swiper skills-about-container">
-      <ul class="swiper-wrapper list-skills-about">
-        <li class="swiper-slide item-skills-about red-skill">
+    <div class="skills-about-container swiper">
+      <ul class="list-skills-about swiper-wrapper">
+        <li class="item-skills-about red-skill swiper-slide" style="width: 200px; height: 200px;">
           <h3 class="title-skills-about">HTML/CSS</h3>
         </li>
-        <li class="swiper-slide item-skills-about">
+        <li class="item-skills-about swiper-slide" style="width: 200px; height: 200px;">
           <h3 class="title-skills-about">JavaScript</h3>
         </li>
-        <li class="swiper-slide item-skills-about">
+        <li class="item-skills-about swiper-slide" style="width: 200px; height: 200px;">
           <h3 class="title-skills-about">React</h3>
         </li>
-        <li class="swiper-slide item-skills-about">
+        <li class="item-skills-about swiper-slide" style="width: 200px; height: 200px;">
           <h3 class="title-skills-about">Node.js</h3>
         </li>
-        <li class="swiper-slide item-skills-about">
+        <li class="item-skills-about swiper-slide" style="width: 200px; height: 200px;">
           <h3 class="title-skills-about">React Native</h3>
         </li>
-        <li class="swiper-slide item-skills-about">
+        <li class="item-skills-about swiper-slide" style="width: 200px; height: 200px;">
           <h3 class="title-skills-about">Soft skills</h3>
         </li>
-        <li class="swiper-slide hide-desktop">
+        <li class="hide-desktop swiper-slide" style="width: 200px; height: 200px;">
           <h3 class="title-skills-about hide-desktop">Hard skills</h3>
         </li>
       </ul>
-      <button type="button" class="swiper-btn btn-arrow" id="arrow">
+      <button type="button" class="btn-arrow" id="arrow">
         <svg class="arrow-skills">
           <use href="./img/about/icons-about.svg#icon-arrow"></use>
         </svg>
