--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -5,12 +5,12 @@
     <nav class="swiper-navigation">
       <div class="swiper-button-prev">
         <svg class="icon-arrow">
-          <use href="../img/reviews/arrows.svg#icon-arrow-narrow-left"></use>
+          <use href="./img/reviews/arrows.svg#icon-arrow-narrow-left"></use>
         </svg>
       </div>
       <div class="swiper-button-next">
         <svg class="icon-arrow">
-          <use href="../img/reviews/arrows.svg#icon-arrow-narrow-right"></use>
+          <use href="./img/reviews/arrows.svg#icon-arrow-narrow-right"></use>
         </svg>
       </div>
     </nav>
