--- a/src/css/about.css
+++ b/src/css/about.css
@@ -59,7 +59,6 @@
   display: flex;
   flex-direction: column;
   border-bottom: 1px solid rgba(250, 250, 250, 0.2);
-  ;
 }
 
 .head-cv-about-container {
@@ -115,14 +114,21 @@
   height: 36px;
 }
 
-.skills-about-container.swiper {
+.skills-about-container {
   display: flex;
+  flex-direction: row;
   align-items: center;
+  justify-content: flex-start;
+  gap: 55px;
 }
 
-.list-skills-about.swiper-wrapper {
+.skills-about-container .swiper-slide-active {
+  background-color: #ed3b44;
+}
+
+.list-skills-about {
   display: flex;
-  margin-right: auto;
+
 }
 
 .swiper-wrapper {
@@ -148,45 +154,22 @@
   transform: rotate(180deg);
 }
 
-.item-skills-about.swiper-slide {
-  width: 130px;
-  height: 130px;
+.item-skills-about {
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
 
+  padding: 88px 52px;
   border: 1px solid rgba(250, 250, 250, 0.2);
   border-radius: 100%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.item-skills-about:hover {
-  background-color: #E0373F;
-}
-
-.item-skills-about:focus {
-  background-color: #E0373F;
 }
 
 .title-skills-about {
   text-align: center;
   letter-spacing: -0.02em;
   color: #fafafa;
-}
-
-.red-skill {
-  background-color: #ed3b44;
-  border: transparent;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.red-skill:hover {
-  background-color: #E0373F;
-}
-
-.red-skill:hover {
-  background-color: #E0373F;
 }
 
 .btn-arrow {
@@ -222,6 +205,25 @@
 
 .swiper-slide.hide-desktop {
   display: none;
+}
+
+.swiper-about .swiper-wrapper {
+  width: 1200px;
+  overflow: hidden;
+}
+
+.item-about.ac {
+  background-color: transparent;
+  border: transparent;
+  border-bottom: 1px solid rgba(250, 250, 250, 0.2);
+}
+
+.head-cv-about-container.ac-header {
+  background-color: transparent;
+}
+
+.text-cv-about-container.ac-panel {
+  background-color: transparent;
 }
 
 @media screen and (max-width: 767px) {
@@ -281,6 +283,10 @@
 
   .list-about {
     gap: 32px;
+  }
+
+  .skills-about-container {
+    gap: 64px;
   }
 
   .text-cv-about-container {
@@ -355,6 +361,10 @@
 
   .list-about {
     gap: 32px;
+  }
+
+  .skills-about-container {
+    gap: 72px;
   }
 
   .text-cv-about-container {
