--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -8,19 +8,19 @@
           personality.</h2>
       </div>
       <picture>
-        <source srcset="../img/about/img.jpg 1x, ../img/about/img@2x.jpg 2x" media="(min-width: 1440px)" />
+        <source srcset="./img/about/img.jpg 1x, ./img/about/img@2x.jpg 2x" media="(min-width: 1440px)" />
 
-        <source srcset="../img/about/img-tab.jpg 1x, ../img/about/img-tab@2x.jpg 2x" media="(min-width: 768px)" />
+        <source srcset="./img/about/img-tab.jpg 1x, ./img/about/img-tab@2x.jpg 2x" media="(min-width: 768px)" />
 
-        <source srcset="../img/about/img-mob.jpg 1x, ../img/about/img-mob@2x.jpg 2x" media="(max-width: 768px)" />
+        <source srcset="./img/about/img-mob.jpg 1x, ./img/about/img-mob@2x.jpg 2x" media="(max-width: 768px)" />
 
-        <img class="img-about" src="../img/about/img.jpg" alt="Man with a laptop">
+        <img class="img-about" src="./img/about/img.jpg" alt="Man with a laptop">
       </picture>
     </div>
-    <div class="text-about-container">
-      <ul class="list-about">
-        <li class="item-about">
-          <div class="head-cv-about-container">
+    <div class="text-about-container accordion-container">
+      <ul class="list-about ">
+        <li class="item-about ac">
+          <div class="head-cv-about-container ac-header">
             <h3 class="small-title-about">About me</h3>
             <button type="button" class="btn-about" id="btn-about">
               <svg class="icon-about icon-open">
@@ -28,7 +28,7 @@
               </svg>
             </button>
           </div>
-          <div class="text-cv-about-container">
+          <div class="text-cv-about-container ac-panel">
             <p class="paragraph-about gap">I am Lloyd Jefferson, a talented programmer with extensive expertise in
               software development. I have an understanding
               of
@@ -52,8 +52,8 @@
             </p>
           </div>
         </li>
-        <li class="item-about">
-          <div class="head-cv-about-container">
+        <li class="item-about ac">
+          <div class="head-cv-about-container ac-header">
             <h3 class="small-title-about">Role</h3>
             <button type="button" class="btn-about" id="btn-role">
               <svg class="icon-about icon-close">
@@ -61,7 +61,7 @@
               </svg>
             </button>
           </div>
-          <div class="text-cv-about-container">
+          <div class="text-cv-about-container ac-panel">
             <ul class="list-cv-about">
               <li>
                 <p class="paragraph-about">Frontend development</p>
@@ -75,8 +75,8 @@
             </ul>
           </div>
         </li>
-        <li class="item-about">
-          <div class="head-cv-about-container">
+        <li class="item-about ac">
+          <div class="head-cv-about-container ac-header">
             <h3 class="small-title-about">Education</h3>
             <button type="button" class="btn-about" id="btn-edu">
               <svg class="icon-about icon-close">
@@ -84,7 +84,7 @@
               </svg>
             </button>
           </div>
-          <div class="text-cv-about-container">
+          <div class="text-cv-about-container ac-panel">
             <ul class="list-cv-about">
               <li>
                 <p class="paragraph-about">2018 - 2019 / Frontend Development Diploma, GoIT IT <br> School, New York</p>
@@ -103,31 +103,31 @@
     </div>
     <div class="skills-about-container swiper-about">
       <ul class="list-skills-about swiper-wrapper">
-        <li class="item-skills-about red-skill swiper-slide" style="width: 200px; height: 200px;">
+        <li class="item-skills-about red-skill swiper-slide">
           <h3 class="title-skills-about">HTML/CSS</h3>
         </li>
-        <li class="item-skills-about swiper-slide" style="width: 200px; height: 200px;">
+        <li class="item-skills-about swiper-slide">
           <h3 class="title-skills-about">JavaScript</h3>
         </li>
-        <li class="item-skills-about swiper-slide" style="width: 200px; height: 200px;">
+        <li class="item-skills-about swiper-slide">
           <h3 class="title-skills-about">React</h3>
         </li>
-        <li class="item-skills-about swiper-slide" style="width: 200px; height: 200px;">
+        <li class="item-skills-about swiper-slide">
           <h3 class="title-skills-about">Node.js</h3>
         </li>
-        <li class="item-skills-about swiper-slide" style="width: 200px; height: 200px;">
+        <li class="item-skills-about swiper-slide">
           <h3 class="title-skills-about">React Native</h3>
         </li>
-        <li class="item-skills-about swiper-slide" style="width: 200px; height: 200px;">
+        <li class="item-skills-about swiper-slide">
           <h3 class="title-skills-about">Soft skills</h3>
         </li>
-        <li class="hide-desktop swiper-slide" style="width: 200px; height: 200px;">
-          <h3 class="title-skills-about hide-desktop">Hard skills</h3>
+        <li class="item-skills-about swiper-slide">
+          <h3 class="title-skills-about">Git</h3>
         </li>
       </ul>
       <button type="button" class="btn-arrow" id="arrow">
         <svg class="arrow-skills">
-          <use href="../img/about/icons-about.svg#icon-arrow"></use>
+          <use href="./img/about/icons-about.svg#icon-arrow"></use>
         </svg>
       </button>
     </div>
