--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,7 +15,7 @@
       <a class="logo" href="./index.html">jefferson*</a>
     </div>
     <a class="menu-link" href="">Menu</a>
-    <button class="header-button">Order the project</button>
+    <a class="header-button" href="#footer">Order the project</a>
     <button class="menu-button" type="button" id="openButton">
       <svg
         class="icon-menu"
