--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -9,6 +9,14 @@
   background-clip: padding-box;
 }
 
+@media screen and (min-resolution: 192dpi) and (max-width: 767px),
+    screen and (min-resolution: 2dppx) and (max-width: 767px),
+    screen and (min-device-pixel-ratio: 2) and (max-width: 767px) {
+        .hero-section {
+            background-image: url(../img/hero/hero-mobile@2x.png);
+        }
+    }
+
 .hero-container {
   max-width: 343px;
   margin: 0 auto;
