--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,14 +1,15 @@
 <section class="hero-section">
     <div class="hero-container">
         <h1 class="hero-title">HELLO. <br> I'M FULLSTACK DEVELOPER LLOYD JEFFERSON.</h1>
-    </div>
-    <div class="social-media-container">
+        
         <ul class="social-media-list">
-            <li><a class="social-media-link" href="https://www.instagram.com/goitclub/" target="_blank">IG</a></li>
-            <li><a class="social-media-link" href="https://www.facebook.com/goITclub/" target="_blank">FB</a></li>
-            <li><a class="social-media-link" href="https://www.youtube.com/c/GoIT" target="_blank">YT</a></li>
-            <li><a class="social-media-link" href="https://ladamenko.github.io/project-united-minds-js/" target="_blank">GH</a></li>
-            <li><a class="email-link" href="mailto:lloydjefferson@gmail.com">lloydjefferson@gmail.com</a></li>
+                <li class="social-media-item"><a class="social-media-link" href="https://www.instagram.com/goitclub/" target="_blank">IG</a></li>
+                <li class="social-media-item"><a class="social-media-link" href="https://www.facebook.com/goITclub/" target="_blank">FB</a></li>
+                <li class="social-media-item"><a class="social-media-link" href="https://www.youtube.com/c/GoIT" target="_blank">YT</a></li>
+                <li class="social-media-item"><a class="social-media-link" href="https://ladamenko.github.io/project-united-minds-js/" target="_blank">GH</a></li>
+                <li class="email-item"><a class="email-link" href="mailto:lloydjefferson@gmail.com">lloydjefferson@gmail.com</a></li>
         </ul>
+        
     </div>
+
 </section>
