--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -3,22 +3,22 @@
   <div class="covers-wrapper">
     
       <ul class="covers-slide-list">
-        <li class="covers-list-item"><img src="../img/slide1.png" alt="" class="covers-slide" /></li>
-        <li class="covers-list-item"><img src="../img/slide2.png" alt="" class="covers-slide" /></li>
-        <li class="covers-list-item"><img src="../img/slide3.png" alt="" class="covers-slide" /></li>
+        <li class="covers-list-item"><img src="./img/covers/slide1.png" alt="" class="covers-slide" /></li>
+        <li class="covers-list-item"><img src="./img/covers/slide2.png" alt="" class="covers-slide" /></li>
+        <li class="covers-list-item"><img src="./img/covers/slide3.png" alt="" class="covers-slide" /></li>
       </ul>
 
       <ul class="covers-slide-list">
-        <li class="covers-list-item"><img src="../img/slide4.png" alt="" class="covers-slide" /></li>
-        <li class="covers-list-item"><img src="../img/slide5.png" alt="" class="covers-slide" /></li>
-        <li class="covers-list-item"><img src="../img/slide6.png" alt="" class="covers-slide" /></li>
-        <li class="covers-list-item"><img src="../img/slide7.png" alt="" class="covers-slide" /></li>
+        <li class="covers-list-item"><img src="./img/covers/slide4.png" alt="" class="covers-slide" /></li>
+        <li class="covers-list-item"><img src="./img/covers/slide5.png" alt="" class="covers-slide" /></li>
+        <li class="covers-list-item"><img src="./img/covers/slide6.png" alt="" class="covers-slide" /></li>
+        <li class="covers-list-item"><img src="./img/covers/slide7.png" alt="" class="covers-slide" /></li>
       </ul>
 
       <ul class="covers-slide-list">
-        <li class="covers-list-item"><img src="../img/slide8.png" alt="" class="covers-slide" /></li>
-        <li class="covers-list-item"><img src="../img/slide9.png" alt="" class="covers-slide" /></li>
-        <li class="covers-list-item"><img src="../img/slide10.png" alt="" class="covers-slide" /></li>
+        <li class="covers-list-item"><img src="./img/covers/slide8.png" alt="" class="covers-slide" /></li>
+        <li class="covers-list-item"><img src="./img/covers/slide9.png" alt="" class="covers-slide" /></li>
+        <li class="covers-list-item"><img src="./img/covers/slide10.png" alt="" class="covers-slide" /></li>
       </ul>
   </div>
 </section>
