--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,76 +1,78 @@
-<section class="footer-section">
-  <div class="luck">
-    <img
-      src="../img/footer/photo-footer.jpg"
-      alt="small my photo "
-      class="img-footer"
-    />
-    <h2 class="footer-title">
-      Let’s <span class="footer-title__red">work</span>
-    </h2>
-    <h2 class="footer-title">together</h2>
-  </div>
+<section class="footer-section" id="footer">
+  <div class="container-footer">
+    <div class="luck">
+      <img
+        src="./img/footer/photo-footer.jpg"
+        alt="small my photo "
+        class="img-footer"
+      />
+      <h2 class="footer-title">
+        Let’s <span class="footer-title__red">work</span>
+      </h2>
+      <h2 class="footer-title">together</h2>
+    </div>
 
-  <form id="contact-form">
-    <input
-      type="email"
-      id="email"
-      name="email"
-      pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
-      placeholder="clients@gmail.com"
-      required
-    />
+    <form id="contact-form">
+      <input
+        type="email"
+        id="email"
+        name="email"
+        pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
+        placeholder="clients@gmail.com"
+        required
+      />
 
-    <textarea id="comment" name="comment" placeholder="comments"></textarea>
+      <textarea id="comment" name="comment" placeholder="comments"></textarea>
 
-    <button type="submit" id="submit-btn">Send</button>
-  </form>
+      <button type="submit" id="submit-btn">Send</button>
+    </form>
 
-  <ul class="footer-contacts">
-    <li class="item">
-      <a href="mailto:lloydjefferson@gmail.com" class="footer-contacts-link"
-        >lloydjefferson@gmail.com</a
-      >
-    </li>
-    <li class="item">
-      <a href="tel:+3801111111111" class="footer-contacts-link"
-        >+3801111111111</a
-      >
-    </li>
-  </ul>
-  <div class="backdrop is-hidden" data-modal>
-    <div class="modal">
-      <button class="modal-btn-close" data-modal-close>
-        <svg
-          width="22"
-          height="22"
-          viewBox="0 0 22 22"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
+    <ul class="footer-contacts">
+      <li class="item">
+        <a href="mailto:lloydjefferson@gmail.com" class="footer-contacts-link"
+          >lloydjefferson@gmail.com</a
         >
-          <path
-            d="M16.5 5.5L5.5 16.5"
-            stroke="#FAFAFA"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M5.5 5.5L16.5 16.5"
-            stroke="#FAFAFA"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </svg>
-      </button>
-      <p class="footer-modal-header">
-        Thank you for your interest in cooperation!
-      </p>
-      <p class="footer-modal-text">
-        The manager will contact you shortly to discuss further details and
-        opportunities for cooperation. Please stay in touch.
-      </p>
+      </li>
+      <li class="item">
+        <a href="tel:+3801111111111" class="footer-contacts-link"
+          >+3801111111111</a
+        >
+      </li>
+    </ul>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn-close" data-modal-close>
+          <svg
+            width="22"
+            height="22"
+            viewBox="0 0 22 22"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M16.5 5.5L5.5 16.5"
+              stroke="#FAFAFA"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M5.5 5.5L16.5 16.5"
+              stroke="#FAFAFA"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </button>
+        <p class="footer-modal-header">
+          Thank you for your interest in cooperation!
+        </p>
+        <p class="footer-modal-text">
+          The manager will contact you shortly to discuss further details and
+          opportunities for cooperation. Please stay in touch.
+        </p>
+      </div>
     </div>
   </div>
 </section>
