Add foto to  retina display
додав фото для покращення його якості на ретіна дисплеї
В html додав srcset для того щоб потрібна фотографія завантажувалась в потрібний момент

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,8 @@
   <div class="container-footer">
     <div class="luck">
       <img
-        src="./img/footer/photo-footer.jpg"
+        src="./img/footer/image.jpg"
+        srcset="./img/footer/image@2x.jpg 2x, ./img/footer/image@3x.jpg 3x"
         alt="small my photo "
         class="img-footer"
       />
